# ca-evm-wallet

./: .gitignore  Makefile  README.md
client/: cli.js  package.json
contract/: Cargo.toml
contract/src/: eth.rs  lib.rs
